@@ -5,7 +5,6 @@ import com.jaypal.authapp.user.model.User;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jws;
 import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -15,57 +14,44 @@ import java.util.stream.Collectors;
 
 @Service
 @Getter
-@Slf4j
 public class JwtService {
 
+    private static final String CLAIM_TYPE = "typ";
     private static final String CLAIM_EMAIL = "email";
     private static final String CLAIM_ROLES = "roles";
     private static final String CLAIM_PERMS = "perms";
-    private static final String CLAIM_TYPE = "typ";
     private static final String CLAIM_PV = "pv";
 
     private final SecretKey secretKey;
     private final long accessTtlSeconds;
-    private final long refreshTtlSeconds;
     private final String issuer;
 
     public JwtService(
             @Value("${security.jwt.secret}") String secret,
             @Value("${security.jwt.access-ttl-seconds}") long accessTtlSeconds,
-            @Value("${security.jwt.refresh-ttl-seconds}") long refreshTtlSeconds,
             @Value("${security.jwt.issuer}") String issuer
     ) {
-        validateSecret(secret);
+        if (secret == null || secret.length() < 64) {
+            throw new IllegalArgumentException("JWT secret too weak");
+        }
         this.secretKey = JwtUtils.createKey(secret);
         this.accessTtlSeconds = accessTtlSeconds;
-        this.refreshTtlSeconds = refreshTtlSeconds;
         this.issuer = issuer;
     }
 
-    /* =========================
-       TOKEN GENERATION
-       ========================= */
+    public String generateAccessToken(User user, Set<PermissionType> permissions) {
 
-    public String generateAccessToken(
-            User user,
-            Set<PermissionType> permissions
-    ) {
         Map<String, Object> claims = new HashMap<>();
         claims.put(CLAIM_TYPE, TokenType.ACCESS.name().toLowerCase());
+        claims.put(CLAIM_EMAIL, user.getEmail());
         claims.put(CLAIM_ROLES, new ArrayList<>(user.getRoles()));
         claims.put(
                 CLAIM_PERMS,
-                permissions.stream()
-                        .map(Enum::name)
-                        .collect(Collectors.toList())
+                permissions.stream().map(Enum::name).toList()
         );
-
-        if (user.getEmail() != null) {
-            claims.put(CLAIM_EMAIL, user.getEmail());
-        }
         claims.put(CLAIM_PV, user.getPermissionVersion());
 
-        return JwtUtils.buildToken(
+        return JwtUtils.buildAccessToken(
                 secretKey,
                 issuer,
                 user.getId(),
@@ -74,78 +60,48 @@ public class JwtService {
         );
     }
 
-    public String generateRefreshToken(User user, String jti) {
-        Map<String, Object> claims = new HashMap<>();
-        claims.put(CLAIM_TYPE, TokenType.REFRESH.name().toLowerCase());
+    public Jws<Claims> parseAccessToken(String token) {
+        Jws<Claims> parsed = JwtUtils.parse(secretKey, issuer, token);
 
-        return JwtUtils.buildRefreshToken(
-                secretKey,
-                issuer,
-                user.getId(),
-                claims,
-                refreshTtlSeconds,
-                jti
-        );
+        String type = parsed.getBody().get(CLAIM_TYPE, String.class);
+        if (TokenType.from(type) != TokenType.ACCESS) {
+            throw new IllegalArgumentException("Not an access token");
+        }
+
+        return parsed;
     }
-
-    /* =========================
-       TOKEN PARSING
-       ========================= */
-
-    public Jws<Claims> parse(String token) {
-        return JwtUtils.parse(secretKey, issuer, token);
-    }
-
-    public boolean isAccessToken(Jws<Claims> parsed) {
-        return TokenType.from(parsed.getBody().get(CLAIM_TYPE, String.class))
-                == TokenType.ACCESS;
-    }
-
-    public boolean isRefreshToken(Jws<Claims> parsed) {
-        return TokenType.from(parsed.getBody().get(CLAIM_TYPE, String.class))
-                == TokenType.REFRESH;
-    }
-
-    /* =========================
-       CLAIM EXTRACTION
-       ========================= */
 
     public UUID extractUserId(Claims claims) {
         return UUID.fromString(claims.getSubject());
+    }
+
+    public long extractPermissionVersion(Claims claims) {
+        return claims.get(CLAIM_PV, Long.class);
+    }
+
+    public Set<String> extractRoles(Claims claims) {
+        return extractSet(claims, CLAIM_ROLES);
+    }
+
+    public Set<String> extractPermissions(Claims claims) {
+        return extractSet(claims, CLAIM_PERMS);
     }
 
     public String extractEmail(Claims claims) {
         return claims.get(CLAIM_EMAIL, String.class);
     }
 
-    public Set<String> extractRoles(Claims claims) {
-        return extractStringSet(claims, CLAIM_ROLES);
-    }
-
-    public Set<String> extractPermissions(Claims claims) {
-        return extractStringSet(claims, CLAIM_PERMS);
-    }
-
-    public long extractPermissionVersion(Claims claims) {return claims.get(CLAIM_PV, Long.class);}
-
-    private Set<String> extractStringSet(Claims claims, String key) {
+    private Set<String> extractSet(Claims claims, String key) {
         Object raw = claims.get(key);
         if (raw == null) return Set.of();
-
         if (!(raw instanceof List<?> list)) {
             throw new IllegalStateException("Invalid claim: " + key);
         }
-
-        return list.stream()
-                .map(String.class::cast)
-                .collect(Collectors.toUnmodifiableSet());
+        return list.stream().map(String.class::cast).collect(Collectors.toUnmodifiableSet());
     }
 
-    private void validateSecret(String secret) {
-        if (secret == null || secret.length() < 64) {
-            throw new IllegalArgumentException(
-                    "JWT secret must be at least 64 characters long"
-            );
-        }
+    public long getRefreshTtlSeconds() {
+        return accessTtlSeconds;
     }
 }
+
